infra/base/app/campaign-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campaign-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campaign-service
  template:
    metadata:
      labels:
        app: campaign-service
    spec:
      containers:
        - name: campaign-service
          image: campaign-service
---
apiVersion: v1
kind: Service
metadata:
  name: campaign-service-srv
spec:
  selector:
    app: campaign-service
  ports:
    - name: campaign-service
      protocol: TCP
      port: 3002
      targetPort: 3000
