infra/base/app/notification-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: notification-service
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-srv
spec:
  selector:
    app: notification-service
  ports:
    - name: notification-service
      protocol: TCP
      port: 3005
      targetPort: 3000
