infra/base/app/socket-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket-service
  template:
    metadata:
      labels:
        app: socket-service
    spec:
      containers:
        - name: socket-service
          image: socket-service
---
apiVersion: v1
kind: Service
metadata:
  name: socket-service-srv
spec:
  selector:
    app: socket-service
  ports:
    - name: socket-service
      protocol: TCP
      port: 3001
      targetPort: 3000
